--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,20 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
-        
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+ext.arch_version = "1.0.0-alpha7"
+ext.support_version = "26.0.0"
+ext.dagger_version = "2.11"
+ext.junit_version = "4.12"
+ext.espresso_version = "3.0.0"
+ext.constraint_layout_version = "1.0.2"
+ext.glide_version = "3.7.0"
 
 allprojects {
     repositories {
