--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.fullmeadalchemist.mustwatch"
-        minSdkVersion 19
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -16,6 +17,9 @@ android {
                                      "$projectDir/schemas".toString()]
             }
         }
+    }
+    dataBinding {
+        enabled = true
     }
     dexOptions {
         javaMaxHeapSize "4g"
@@ -26,22 +30,66 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
-    testImplementation 'junit:junit:4.12'
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha5"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha5"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha5"
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha5"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha5"
-    testCompile "android.arch.persistence.room:testing:1.0.0-alpha5"
-    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha5"
+
+    implementation "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:design:$support_version"
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:recyclerview-v7:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
+    compile "android.arch.lifecycle:runtime:$arch_version"
+    compile "android.arch.lifecycle:extensions:$arch_version"
+    compile "android.arch.persistence.room:runtime:$arch_version"
+    compile "android.arch.persistence.room:rxjava2:$arch_version"
+
+    compile "javax.inject:javax.inject:1"
+    compile "javax.annotation:javax.annotation-api:1.2"
+    compile "com.github.bumptech.glide:glide:$glide_version"
+
+    // Dagger
+    // https://google.github.io/dagger/
+    compile "com.google.dagger:dagger:$dagger_version"
+    compile "com.google.dagger:dagger-android:$dagger_version"
+    compile "com.google.dagger:dagger-android-support:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+
+
+    testCompile "android.arch.persistence.room:testing:$arch_version"
+    testCompile "junit:junit:$junit_version"
+
+//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestCompile "com.android.support.test:runner:1.0.0"
+    androidTestCompile "com.android.support.test:rules:1.0.0"
+
+    // Espresso dependencies
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-accessibility:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-web:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso.idling:idling-concurrent:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
+
 }
+
+
