--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$support_version"
+    compile 'org.jscience:jscience:4.3.1'
     compile "com.android.support:design:$support_version"
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
