--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$support_version"
-    //compile 'org.jscience:jscience:4.3.1'
-    compile 'com.google.code.gson:gson:2.8.1'
     compile "com.android.support:design:$support_version"
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
@@ -78,9 +76,12 @@ dependencies {
     compile 'javax.inject:javax.inject:1'
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile "com.github.bumptech.glide:glide:$glide_version"
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile ('org.jscience:jscience:4.3.1') {
+        exclude group: 'org.javolution', module: 'javolution'
+    }
 
     // RxAndroid
-
     // https://github.com/ReactiveX/RxAndroid
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
