--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,19 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    signingConfigs {
+        release {
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
     defaultConfig {
         applicationId "com.fullmeadalchemist.mustwatch"
 
-        // FIXME: Change to 14 before building for release!
-        // minSdkVersion 14
-        minSdkVersion 24
+        minSdkVersion 14
         targetSdkVersion 26
 
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,14 +39,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
     aaptOptions {
-        // FIXME: Change to 'true' before building for release!
-        cruncherEnabled = false
+        cruncherEnabled = true
     }
     flavorDimensions "default"
     productFlavors {
-        dev {
+        beta {
+            versionNameSuffix '-beta'
+            applicationIdSuffix ".beta"
             dimension "default"
-            //resConfigs "en", "xhdpi"
         }
         prod {
             dimension "default"
@@ -51,10 +55,19 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+            pseudoLocalesEnabled true
         }
         release {
+            minifyEnabled false
             //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            pseudoLocalesEnabled false
+            zipAlignEnabled true
         }
     }
 }
@@ -77,31 +90,22 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile "com.github.bumptech.glide:glide:$glide_version"
     compile 'com.google.code.gson:gson:2.8.1'
-//    compile ('org.jscience:jscience:4.3.1') {
-//        exclude group: 'org.javolution', module: 'javolution'
-//    }
 
     //
-    // UNITS OF MEASUREMENT
-    // JSR 363
-    //
+    // UNITS OF MEASUREMENT (JSR 363)
     // https://github.com/unitsofmeasurement/unit-api
-    compile 'javax.measure:unit-api:1.0'
-    //
-    // Units of Measurement Implementation for Java SE 8 and above
-    // provides some duplicate functionality of the reference implementation
-    //https://github.com/unitsofmeasurement/uom-se
-    //compile 'tec.uom:uom-se:1.0.8'
-    //
     // https://github.com/unitsofmeasurement/uom-systems/tree/master/common
-    // https://bintray.com/unitsofmeasurement/maven/systems.uom%3Asystems-common/0.7.1
+    compile 'javax.measure:unit-api:1.0'
     compile 'systems.uom:systems-common:0.7.1'
+    compile 'systems.uom:systems-quantity:0.7.1'
 
+    //
     // RxAndroid
     // https://github.com/ReactiveX/RxAndroid
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
 
+    //
     // Dagger
     // https://google.github.io/dagger/
     compile "com.google.dagger:dagger:$dagger_version"
@@ -133,4 +137,10 @@ dependencies {
     androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
 }
 
-
+// https://www.thoughtworks.com/insights/blog/signing-open-source-android-apps-without-disclosing-passwords
+def props = new Properties()
+props.load(new FileInputStream(rootProject.file("release.properties")))
+android.signingConfigs.release.storeFile rootProject.file(props.keyStore)
+android.signingConfigs.release.storePassword props.keyStorePassword
+android.signingConfigs.release.keyAlias props.keyAlias
+android.signingConfigs.release.keyPassword props.keyAliasPassword
