Added basic Recipe support in the database
- added Timber
- fixed serialization and deserialization for BatchIngredient
- added teaspoon measurement
- further improved unit tests to factor out user creation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,18 +72,20 @@ android {
     flavorDimensions "default"
     productFlavors {
         beta {
-            versionNameSuffix '-beta'
-            applicationIdSuffix ".beta"
             dimension "default"
+            versionNameSuffix '-beta'
+            applicationIdSuffix '.beta'
         }
         prod {
             dimension "default"
+            versionNameSuffix '-prod'
         }
     }
     buildTypes {
         debug {
             minifyEnabled false
             pseudoLocalesEnabled true
+            applicationIdSuffix '.debug'
         }
         release {
             minifyEnabled false
