--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,6 @@ android {
         }
         prod {
             dimension "default"
-            versionNameSuffix '-prod'
         }
     }
     buildTypes {
@@ -107,40 +106,40 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:recyclerview-v7:$support_version"
-    compile "com.android.support:cardview-v7:$support_version"
-    compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-    compile "android.arch.lifecycle:runtime:$arch_version"
-    compile "android.arch.lifecycle:extensions:$arch_version"
-    compile "android.arch.persistence.room:runtime:$arch_version"
-    compile "android.arch.persistence.room:rxjava2:$arch_version"
-    compile 'javax.inject:javax.inject:1'
-    compile 'javax.annotation:javax.annotation-api:1.2'
-    compile "com.github.bumptech.glide:glide:$glide_version"
-    compile 'com.google.code.gson:gson:2.8.1'
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation "android.arch.lifecycle:runtime:$arch_version"
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    implementation "android.arch.persistence.room:runtime:$arch_version"
+    implementation "android.arch.persistence.room:rxjava2:$arch_version"
+    implementation 'javax.inject:javax.inject:1'
+    implementation 'javax.annotation:javax.annotation-api:1.2'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation 'com.google.code.gson:gson:2.8.1'
 
     //
     // UNITS OF MEASUREMENT (JSR 363)
     // https://github.com/unitsofmeasurement/unit-api
     // https://github.com/unitsofmeasurement/uom-systems/tree/master/common
-    compile 'javax.measure:unit-api:1.0'
-    compile 'systems.uom:systems-common:0.7.1'
-    compile 'systems.uom:systems-quantity:0.7.1'
+    implementation 'javax.measure:unit-api:1.0'
+    implementation 'systems.uom:systems-common:0.7.1'
+    implementation 'systems.uom:systems-quantity:0.7.1'
 
     //
     // RxAndroid
     // https://github.com/ReactiveX/RxAndroid
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
 
     //
     // Dagger
     // https://google.github.io/dagger/
-    compile "com.google.dagger:dagger:$dagger_version"
-    compile "com.google.dagger:dagger-android:$dagger_version"
-    compile "com.google.dagger:dagger-android-support:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
@@ -150,26 +149,26 @@ dependencies {
     // DEBUG ONLY
     //
     // http://facebook.github.io/stetho/
-    compile 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
     //
     // https://github.com/JakeWharton/timber
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
 
 
-    testCompile "android.arch.persistence.room:testing:$arch_version"
-    testCompile "junit:junit:$junit_version"
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    testImplementation "android.arch.persistence.room:testing:$arch_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
 
     // Espresso dependencies
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-accessibility:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-web:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso.idling:idling-concurrent:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-accessibility:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-web:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
 }
