--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta5'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-ext.arch_version = "1.0.0-alpha9"
-ext.support_version = "26.0.2"
+ext.arch_version = "1.0.0-beta1"
+ext.support_version = "26.1.0"
 ext.dagger_version = "2.11"
 ext.junit_version = "4.12"
 ext.espresso_version = "3.0.0"
