--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,6 +155,7 @@ dependencies {
 
     testImplementation "android.arch.persistence.room:testing:$arch_version"
     testImplementation "junit:junit:$junit_version"
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.1'
 
