Added testing keystore, refactored secrets to use novoda build-properties
This allows the secrets to be set using environment variables or by a file.

Also added the Fabric.io keys since they're included in the build APK anyway.

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,7 @@
 *.apk
 /app/prod/release/*
 .externalNativeBuild
-release.properties
+secrets.properties
 fma_upload_key.jks
-fabric.properties
 .idea/dictionaries/
 .idea/
