--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
+      keyStore: testing_keystore.jks
+      keyStorePassword: debugpassword
+      keyAlias: key0
+      keyAliasPassword: debugpassword
 
     steps:
       - checkout
