--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,17 +11,29 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'com.novoda.build-properties'
+
+
+buildProperties {
+    secrets {
+        file project.file('secrets.properties')
+    }
+}
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
 
-
 android {
     compileSdkVersion 26
     signingConfigs {
         release {
+            storeFile file(buildProperties.secrets['keyStore'].string)
+            storePassword  buildProperties.secrets['keyStorePassword'].string
+            keyAlias  buildProperties.secrets['keyAlias'].string
+            keyPassword  buildProperties.secrets['keyAliasPassword'].string
             v1SigningEnabled true
             v2SigningEnabled true
         }
@@ -100,7 +112,6 @@ android {
 }
 
 
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$support_version"
@@ -109,10 +120,10 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-    implementation "android.arch.lifecycle:runtime:$arch_version"
-    implementation "android.arch.lifecycle:extensions:$arch_version"
-    implementation "android.arch.persistence.room:runtime:$arch_version"
-    implementation "android.arch.persistence.room:rxjava2:$arch_version"
+    implementation "android.arch.lifecycle:runtime:$arch_lifecycle_version"
+    implementation "android.arch.lifecycle:extensions:$arch_lifecycle_version"
+    implementation "android.arch.persistence.room:runtime:$arch_persistence_version"
+    implementation "android.arch.persistence.room:rxjava2:$arch_persistence_version"
     implementation 'javax.inject:javax.inject:1'
     implementation 'javax.annotation:javax.annotation-api:1.2'
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -140,8 +151,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_lifecycle_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_persistence_version"
 
     //
     // DEBUG ONLY
@@ -153,7 +164,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.5.1'
 
 
-    testImplementation "android.arch.persistence.room:testing:$arch_version"
+    testImplementation "android.arch.persistence.room:testing:$arch_persistence_version"
     testImplementation "junit:junit:$junit_version"
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -171,11 +182,3 @@ dependencies {
         transitive = true
     }
 }
-
-// https://www.thoughtworks.com/insights/blog/signing-open-source-android-apps-without-disclosing-passwords
-def props = new Properties()
-props.load(new FileInputStream(rootProject.file("release.properties")))
-android.signingConfigs.release.storeFile rootProject.file(props.keyStore)
-android.signingConfigs.release.storePassword props.keyStorePassword
-android.signingConfigs.release.keyAlias props.keyAlias
-android.signingConfigs.release.keyPassword props.keyAliasPassword
