--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-
+        classpath 'com.novoda:gradle-build-properties-plugin:0.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-ext.arch_version = "1.0.0"
+ext.arch_lifecycle_version = "1.1.0"
+ext.arch_persistence_version = "1.0.0"
 ext.support_version = "26.1.0"
 ext.dagger_version = "2.11"
 ext.junit_version = "4.12"
