--- a/app/secrets.properties.example
+++ b/app/secrets.properties.example
@@ -1,4 +1,4 @@
-keyStore=some_key.jks
-keyStorePassword=SuperSecretStorePassword
-keyAlias=SuperSecretKeyAlias
-keyAliasPassword=SuperSecretAliasPassword
+keyStore=testing_keystore.jks
+keyStorePassword=debugpassword
+keyAlias=key0
+keyAliasPassword=debugpassword
