--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,57 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
+# Derived from https://github.com/squanchy-dev/squanchy-android
+
 version: 2
 jobs:
   build:
+    working_directory: ~/squanchy
+
     docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/android:api-27-alpha
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
+    working_directory: ~/fma
 
     environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
+      ANDROID_HOME: /opt/android/sdk
+      APPLICATION_ID: com.fullmeadalchemist.mustwatch
+      FABRIC_API_KEY: 0000000000000000000000000000000000000000
 
     steps:
       - checkout
 
-      # Download and cache dependencies
+      # Restore cached dependencies (if any)
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
 
-      - run: gradle dependencies
+      # Prepare the container for the build
+      - run:
+          name: Ensure Android SDK install is up-to-date
+          command: .circleci/ci-scripts/ensure-sdkmanager.sh
 
+      # Run the main job command, delegating to Gradle
+      # See https://issuetracker.google.com/issues/62217354 for the parallelism option
+      - run:
+          name: Run Gradle :check command
+          command: ./gradlew check --continue -Djava.util.concurrent.ForkJoinPool.common.parallelism=2
+
+      # Store all the downloaded dependencies in the CI cache
       - save_cache:
           paths:
-            - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
+            # Android SDK
+            - /usr/local/android-sdk-linux/tools
+            - /usr/local/android-sdk-linux/platform-tools
+            - /usr/local/android-sdk-linux/build-tools
+            - /usr/local/android-sdk-linux/licenses
+            - /usr/local/android-sdk-linux/extras/google/m2repository
 
-      # run tests!
-      - run: gradlew test
+            # Gradle dependencies
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+
+      # Collect static analysis reports as build artifacts
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+
+      # Collect JUnit test results
+      - store_test_results:
+          path: app/build/test-results
