WIP migration to Android Jetpack style
- added navigation framework, started migrating to a single StartActivity
- update dependency versions
- Cleaned up Dagger DI
- moved to databinding v2
- testing with Android P

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,5 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+android.databinding.enableV2=true
 org.gradle.jvmargs=-Xmx4536m
