--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         // Keep this updated to the latest version:
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.24.1'
+        classpath 'io.fabric.tools:gradle:1.25.1'
     }
 }
 apply plugin: 'com.android.application'
@@ -15,6 +15,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.novoda.build-properties'
 apply plugin: 'io.fabric'
+//apply plugin: "androidx.navigation.safeargs"
 
 def secretsFile = project.file('secrets.properties')
 buildProperties {
@@ -23,23 +24,31 @@ buildProperties {
     }
 }
 
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xmaxerrs" << "500"
+    }
+}
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
-
 
 android {
     compileSdkVersion 27
     signingConfigs {
         release {
             storeFile file(buildProperties.secrets['keyStore'].string)
-            storePassword  buildProperties.secrets['keyStorePassword'].string
-            keyAlias  buildProperties.secrets['keyAlias'].string
-            keyPassword  buildProperties.secrets['keyAliasPassword'].string
+            storePassword buildProperties.secrets['keyStorePassword'].string
+            keyAlias buildProperties.secrets['keyAlias'].string
+            keyPassword buildProperties.secrets['keyAliasPassword'].string
             v1SigningEnabled true
             v2SigningEnabled true
         }
+    }
+
+    kapt {
+        generateStubs = true
     }
 
     testOptions {
@@ -94,6 +103,7 @@ android {
         debug {
             minifyEnabled false
             pseudoLocalesEnabled true
+            ext.enableCrashlytics = false
         }
         release {
             minifyEnabled false
@@ -110,21 +120,20 @@ android {
     }
 }
 
-
 //tasks.withType(JavaCompile) {
 //    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 //}
 
 dependencies {
-    kapt 'com.android.databinding:compiler:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     implementation "android.arch.lifecycle:runtime:$arch_lifecycle_version"
     implementation "android.arch.lifecycle:extensions:$arch_lifecycle_version"
@@ -140,8 +149,8 @@ dependencies {
     // https://github.com/unitsofmeasurement/unit-api
     // https://github.com/unitsofmeasurement/uom-systems/tree/master/common
     implementation 'javax.measure:unit-api:1.0'
-    implementation 'systems.uom:systems-common:0.7.1'
-    implementation 'systems.uom:systems-quantity:0.7.1'
+    implementation 'systems.uom:systems-common:0.8'
+    implementation 'systems.uom:systems-quantity:0.8'
 
     //
     // RxAndroid
@@ -152,16 +161,12 @@ dependencies {
     //
     // Dagger
     // https://google.github.io/dagger/
-//    implementation "com.google.dagger:dagger:$dagger_version"
-//    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
 
-    implementation "com.google.dagger:dagger:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt  "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt  "com.google.dagger:dagger-android-processor:$dagger_version"
-    kapt  "com.google.dagger:dagger-android-support:$dagger_version"
-
+    // Dagger Android
+    kapt "com.google.dagger:dagger-android-processor:2.16"
+    implementation "com.google.dagger:dagger-android-support:2.16"
 
     kapt "android.arch.lifecycle:compiler:$arch_lifecycle_version"
     kapt "android.arch.persistence.room:compiler:$arch_persistence_version"
@@ -173,14 +178,14 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     //
     // https://github.com/JakeWharton/timber
-    implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'com.jakewharton.timber:timber:4.7.0'
 
 
     testImplementation "android.arch.persistence.room:testing:$arch_persistence_version"
     testImplementation "junit:junit:$junit_version"
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     // Espresso dependencies
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
@@ -193,4 +198,8 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
+
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha01"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha01"
+
 }
