--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version='1.2.21'
+    ext.kotlin_version='1.2.41'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha16'
         classpath 'com.novoda:gradle-build-properties-plugin:0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
         //classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-ext.arch_lifecycle_version = "1.1.0"
-ext.arch_persistence_version = "1.0.0"
-ext.support_version = "27.0.2"
-ext.dagger_version = "2.14.1"
+ext.arch_lifecycle_version = "1.1.1"
+ext.arch_persistence_version = "1.1.0"
+ext.support_version = "27.1.1"
+ext.dagger_version = "2.5"
 ext.junit_version = "4.12"
 ext.espresso_version = "3.0.0"
-ext.constraint_layout_version = "1.1.0-beta4"
+ext.constraint_layout_version = "1.1.0"
 ext.glide_version = "3.7.0"
 
 allprojects {
