--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version='1.2.61'
+    ext.kotlin_version='1.3.10'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.novoda:gradle-build-properties-plugin:0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01"
@@ -25,6 +25,8 @@ ext.junit_version = "4.12"
 ext.espresso_version = "3.0.0"
 ext.constraint_layout_version = "1.1.3"
 ext.glide_version = "3.7.0"
+ext.anko_version='0.10.8'
+ext.koin_version = '1.0.2'
 
 allprojects {
     repositories {
